Ignore pandoc-generated HTML file.

--- a/qri-deterministic_querying/.gitignore
+++ b/qri-deterministic_querying/.gitignore
@@ -10,3 +10,9 @@
 *~
 .#*
 .git/COMMIT_EDITMSG
+
+
+# Directory-specific things.
+# ......................................................................
+
+deterministic_querying.html
