Make git ignore *.html rather than specific .html files.

--- a/qri-deterministic_querying/.gitignore
+++ b/qri-deterministic_querying/.gitignore
@@ -16,4 +16,4 @@ auto
 # Directory-specific things.
 # ......................................................................
 
-deterministic_querying.html
+*.html
