Keep processed HTML in repo for now.

--- a/qri-deterministic_querying/.gitignore
+++ b/qri-deterministic_querying/.gitignore
@@ -16,4 +16,5 @@ auto
 # Directory-specific things.
 # ......................................................................
 
-*.html
+# Need to check in the HTML because we need to process it with pandoc.
+# *.html
