--- a/qri-deterministic_querying/Makefile
+++ b/qri-deterministic_querying/Makefile
@@ -31,7 +31,7 @@ default $(output): $(main) $(bib)
 
 reload:;
 	make
-	reload-safari
+	open -g $(output)
 
 autorefresh:;
 	((ls $(main) $(bib) | entr make reload) &)
